syntax = "proto3";
package common;
option go_package = "github.com/nikhovas/diploma/go/lib/proto/common";

message EmptyResponse {}

message MsgLocation {
    string service = 1;
    int64 groupId = 2;
    int64 userId = 3;
}

message WaitingQuesionInformation {
    MsgLocation msgLocation = 1;
    string question = 2;
    int64 questionMsgId = 3;
}

message Product {
    int64 id = 1;
    string title = 2;
    string description = 3;
    string url = 4;
}

message Order {
    int64 id = 1;
    int64 shopId = 2;
    bool selfPickup = 3;
    string address = 4;
    repeated string item = 5;
    string userId = 6;
}
