syntax = "proto3";
package question_worker;
option go_package = "github.com/nikhovas/diploma/go/lib/proto/question_worker";


message GetQuestionAnswerRequest {
    string uuid = 1;
    string question = 2;
    repeated string previousQuestions = 3;
    string basePath = 4;
}

message GetQuestionAnswerResponse {
    string answer = 1;
    float repeatedDistance = 2;
    float answerDistance = 3;
}

message AddQuestionRequest {
    string uuid = 1;
    string question = 2;
    string answer = 3;
    string basePath = 4;
}

message AddQuestionResponse {}


service QuestionWorker {
  rpc GetQuestionAnswer(GetQuestionAnswerRequest) returns (GetQuestionAnswerResponse) {}
  rpc AddQuestion(AddQuestionRequest) returns (AddQuestionResponse) {}
}